// TODO[model_refactor_api] - .gitignore the generated .ts and generate it automatically via webpack?
syntax = "proto3";

import "src/projects/shared/site/src/proto/Circuit.proto";


message DigitalSimState {
    enum Signal {
        Off = 0;
        On = 1;
        Metastable = 2;
    }
    message State {
        repeated Signal state = 1;
    }

    // Array of signals corresponding to the flat(circuit.components.map(allPorts))
    repeated Signal signals = 1;
    // index of component in circuit.components : state of the component
    map<uint32, State> states = 2;
    // index of component in circuit.components : state of the component
    map<uint32, DigitalSimState> icStates = 3;
}

message DigitalCircuit {
    Circuit circuit = 1;

    float propagationTime = 2;

    // Array of IC states corresponding to circuit.ics
    repeated DigitalSimState icInitialSimStates = 3;
    DigitalSimState simState = 4;
}
