syntax = "proto3";

message Prop {
    oneof prop {
        int32 int_val = 1;
        float float_val = 2;
        string str_val = 3;
        bool bool_val = 4;
    }
}

message Component {
    bytes id = 1;
    int32 kind = 2;
    optional bytes icId = 3;
    map<string, Prop> props = 4;
}

message Wire {
    bytes id = 1;
    int32 kind = 2;
    map<string, Prop> props = 3;

    bytes p1 = 4;
    bytes p2 = 5;
}

message Port {
    bytes id = 1;
    int32 kind = 2;
    map<string, Prop> props = 3;

    bytes parent = 4;
    string group = 5;
    int32 index = 6;
}

message Camera {
    float x = 1;
    float y = 2;
    float zoom = 3;
}

message CircuitMetadata {
    bytes id = 1;
    string name = 2;
    string desc = 3;
    string thumb = 4;
    string version = 5;
}

message IntegratedCircuitMetadata {
    CircuitMetadata metadata = 1;

    float displayWidth = 2;
    float displayHeight = 3;

    message Pin {
        bytes id = 1;
        string group = 2;
        string name = 3;

        float x = 4;
        float y = 5;
        float dx = 6;
        float dy = 7;
    }
    repeated Pin pins = 4;
}

message IntegratedCircuit {
    IntegratedCircuitMetadata metadata = 1;
    
    repeated Component components = 3;
    repeated Wire wires = 4;
    repeated Port ports = 5;
}

message Circuit {
    CircuitMetadata metadata = 1;

    Camera camera = 2;

    repeated IntegratedCircuit ics = 3;

    repeated Component components = 4;
    repeated Wire wires = 5;
    repeated Port ports = 6;
}
